--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>finger exercise</title>
         <link href="style.css" rel="stylesheet">
+        <link href="press-button.png" rel="shortcut icon">
     </head>
     <body>
         <div id="cnter">
