--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div id="des">
             방문 기록을 삭제하거나 시크릿 모드로 접속하면 저장기능이 동작하지 않을 수 있습니다!
-            <br>font: Noto Sans<br>favicon: freepik
+            <br>font: Noto Sans, favicon: freepik
         </div>
         <!-- 클릭 감지를 위한 레이어 -->
         <div id="layer" onclick="plus()"></div>
