--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
         <link href="press-button.png" rel="shortcut icon">
     </head>
     <body>
-        <div id="cnter">
-            <b id="num"></b>번 클릭하셨습니다.<div id="watch"></div>
-        </div>
-        <div id="des">
-            방문 기록을 삭제하거나 시크릿 모드로 접속하면 저장기능이 동작하지 않을 수 있습니다!
-            <br>font: Noto Sans, favicon: freepik
-        </div>
-        <!-- 클릭 감지를 위한 레이어 -->
-        <div id="layer" onclick="plus()"></div>
-        <button id="initBtn" onclick="init()">초기화</button>
+        <article>
+            <div id="cnter">
+                <b id="num"></b>번 클릭하셨습니다.<div id="watch"></div>
+            </div>
+            <div id="des">
+                방문 기록을 삭제하거나 시크릿 모드로 접속하면 저장기능이 동작하지 않을 수 있습니다!
+                <br>font: Noto Sans, favicon: freepik
+            </div>
+            <span id="rec"></span>
+            <div id="layer" onmousedown="check()"></div>
+            <button id="initBtn" onclick="init()">초기화</button>
+        </article>
         <script src="main.js"></script>
     </body>
 </html>
